# serializer version: 1
# name: test_hello_world[None]
  '''
                                                                                  
   Usage: main [OPTIONS] COMMAND [ARGS]...                                        
                                                                                  
  ╭─ Options ────────────────────────────────────────────────────────────────────╮
  │ --version      Show the version and exit.                                    │
  │ --help         Show this message and exit.                                   │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  ╭─ Commands ───────────────────────────────────────────────────────────────────╮
  │ books     Commands to manage books                                           │
  │ login     Login to Google with GHunt                                         │
  │ rpc       Perform RPC call via underlying google_internal_apis package       │
  │ shelves   Commands to manage shelves                                         │
  │ steal     Steal the cookie from a Chrome net-export log                      │
  │ upload    Upload files to Google Books                                       │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
  
  '''
# ---
# name: test_hello_world[books]
  '''
                                                                                  
   Usage: main books [OPTIONS] COMMAND [ARGS]...                                  
                                                                                  
   Commands to manage books                                                       
                                                                                  
  ╭─ Options ────────────────────────────────────────────────────────────────────╮
  │ --help      Show this message and exit.                                      │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  ╭─ Commands ───────────────────────────────────────────────────────────────────╮
  │ get                  get book info                                           │
  │ list                 list books                                              │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
  
  '''
# ---
# name: test_hello_world[shelves]
  '''
                                                                                  
   Usage: main shelves [OPTIONS] COMMAND [ARGS]...                                
                                                                                  
   Commands to manage shelves                                                     
                                                                                  
  ╭─ Options ────────────────────────────────────────────────────────────────────╮
  │ --help      Show this message and exit.                                      │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  ╭─ Commands ───────────────────────────────────────────────────────────────────╮
  │ add               add book to shelf                                          │
  │ list              list shelves                                               │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
  
  '''
# ---
